# IBM-Bob-Hackathon-Solution

./: .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  IMPLEMENTATION_PLAN.md  README.md  SETUP_INSTRUCTIONS.md  calculator.py  example_usage.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.bob/rules-advanced/: AGENTS.md
.bob/rules-ask/: AGENTS.md
.bob/rules-code/: AGENTS.md
.bob/rules-plan/: AGENTS.md
.github/workflows/: ci.yml
bob_sessions/: Task1-Implementation-Plan.md  Task2-Complete-Implementation.md
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  USAGE.md
src/calculator/: __init__.py  calculator.py
tests/: __init__.py  conftest.py  test_calculator.py  test_edge_cases.py
